--- a/leads_tracker/manifest.json
+++ b/leads_tracker/manifest.json
@@ -2,6 +2,9 @@
     "manifest_version": 3,
     "version": "1.1",
     "name": "Leads Tracker",
+    "permissions": [
+        "tabs"
+    ],
     "action": {
         "default_popup": "index.html",
         "default_icon": "icon.png"
